Css/kasper.css
/* ... */
.video::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgb(0 0 0 / 40%);
}
.video .text {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  background-color: var(--transparent-color);
  display: block;
  width: 100%;
  text-align: center;
  color: white;
  padding: 15px
}
.video .text h2 {
  font-weight: normal;
  text-transform: uppercase;
  margin: 0 0 30px;
}
.video .text p {
  text-transform: capitalize;
  margin: 0 0 35px;
}
.video .text button {
  padding: 10px 30px;
  border: none;
  background-color: black;
  color: white;
  text-transform: uppercase;
}
/* End Video */
/* Start About */
.about {
  padding-top: var(--section-padding);
  overflow: hidden;
  text-align: center;
}
.about img {
  position: relative;
  bottom: -120px;
  margin-top: -120px;
  border-radius: 15px;
  max-width: 100%;
}
@media (max-width: 767px) {
  .about img {
    bottom: -60px;
    margin-top: -60px;
    max-width: 100%;
  }
}
/* End About */
/* Start Stats */
.stat {
  padding-top: var(--section-padding);
  padding-bottom: var(--section-padding);
  background-image: url(../Images/assets/Stats.jpg);
  background-size: cover;
  position: relative;
  text-align: center;
}
.stat::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgb(0 0 0 / 70%);
}
.stat .container {
  display: flex;
  flex-wrap: wrap ;
  position: relative;
}
.stat .container .box {
  color: white;
  background-color: var(--transparent-color);
  padding: 50px;
  position: relative;
}
@media (max-width: 767px) {
  .stat .container .box {
    flex-basis: 100%;
  }
  .stat .container .box::before {
    content: '';
    position: absolute;
    width: calc(100% - 100px);
    height: 2px;
    background-color: white;
    left: 50%;
    transform: translateX(-50%);
    bottom: 0;
  }
}
@media (min-width: 768px) {
  .stat .container .box {
    flex-basis: 50%;
  }
  .stat .container hr {
    display: hidden;
  }
}
@media (min-width: 992px) {
  .stat .container .box {
    flex-basis: 25%;
  }
  .stat .container hr {
    display: hidden;
  }
}
.stat .container .box i {
  background-color: black;
  width: 40px;
  height: 40px;
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 0 auto 30px;
  border-radius: 50%;
}
.stat .container .box .number {
  font-size: 50px;
  font-weight: bold;
  margin: 0 0 20px;
}
.stat .container .box p {
  font-size: 14px;
}
/* End Stats */
/* Start Skills */
.our-skills {
  padding-top: var(--section-padding);
  padding-bottom: var(--section-padding);
}
.our-skills .container {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

@media (min-width: 992px) {
  .our-skills .container > div {
    flex-basis: 45%;
  }
}
.our-skills .container > div > h3 {
  text-transform: uppercase;
  font-weight: normal;
  margin: 0 0 30px;
  text-align: center;
}
.our-skills .container > div > p {
  color: #777;
  line-height: 2;
  text-align: center;
  margin-bottom: 60px;
}
.our-skills .container .testimonials .content {
  display: flex;
  align-items: center;
  margin-bottom: 30px;
}
.our-skills .container .testimonials .content img {
  width: 100px;
  border-radius: 50%;
  margin-right: 50px;
}
@media (max-width: 767px) {
  .our-skills .container .testimonials .content {
    flex-direction: column;
    text-align: center !important;
  }
  .our-skills .container .testimonials .content img {
    margin: 0 auto 20px;
  }
}
.our-skills .testimonials .text {
  line-height: 1.8;
  border-bottom: 1px solid #ccc;
}
.our-skills .testimonials .text p {
  color: #777;
  text-align: right;
  font-size: 14px;
  margin-bottom: 10px;
}
.our-skills .testimonials .bullets {
  display: flex;
  justify-content: center;
  background-color: grey;
  margin-top: 50px;
  margin-bottom: 50px;
  position: relative;
}
.our-skills .testimonials .bullets ul {
  display: flex;
  position: absolute;
  left: 50%;
  transform: translate(-50%);
}
.our-skills .testimonials .bullets li {
  width: 14px;
  height: 14px;
  border-radius: 50%;
  border: 1px solid #aaa;
  margin-right: 5px;
}
.our-skills .testimonials .bullets li.active {
  background-color: var(--transparent-color);
  border-color: var(--transparent-color);
}
.our-skills .skills .prog-holder {
  margin-bottom: 40px;

}
.our-skills .skills .prog-holder h4 {
  margin-bottom: 15px;
  font-weight: normal;
  text-transform: uppercase;
}
.our-skills .skills .prog-holder .prog {
  display: block;
  background-color: #dedadc;
  height: 30px;
}
.our-skills .skills .prog-holder .prog span{
  background-color: var(--main-color);
  height: 100%;
  display: block;
  position: relative;
}
.our-skills .skills .prog-holder .prog span::before {
  content: attr(data-progress);
  position: absolute;
  background-color: black;
  color: white;
  top: -40px;
  right: -18px;
  padding: 4px 0;
  width: 40px;
  text-align: center;
  border-radius: 4px;
}
.our-skills .skills .prog-holder .prog span::after {
  content: '';
  position: absolute;
  border: 8px solid;
  border-color: black transparent transparent transparent;
  right: -6px;
  top: -15px
}
/* End Skills */
/* Start Quote */
.quote {
  padding-top: var(--section-padding);
  padding-bottom: var(--section-padding);
  position: relative;
  color: white;
  text-align: center;
  background-image: url(../Images/assets/quote.jpg);
  background-size: cover;
}
.quote::before {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: rgb(0 0 0 / 75%);
}
.quote q {
  display: block;
  font-size: 30px;
  margin-bottom: 20px;
  position: relative;
  quotes: "\f10d" "\f10e";
}
.quote q::before {
  content: open-quote;
  font-family: "Font Awesome 5 Free";
  font-weight: 900;
  font-size: 30px;
}
.quote q::after {
  content: close-quote;
  font-family: "Font Awesome 5 Free";
  font-weight: 900;
  font-size: 30px;
}
/* ... */

